--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -18,6 +19,7 @@
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="lib/bootstrap.min.js"></script>
 
   <!-- Swiper -->
   <link rel="stylesheet" href="lib/Swiper/dist/css/swiper.min.css">
